# hifz

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
data/: arabic_letters.csv  arabic_letters.json  fruits.csv  fruits.json  fruits.xml
docs/: conf.py  index.md  index.rst
docs/api/: hifz.rst  hifz.visualizers.rst
src/: main.py
src/hifz/: __init__.py  __main__.py  card_engine.py  dataserver.py  learning_strategies.py  main.py  models.py  utils.py  visualizers.py
src/hifz/visualizers/: __init__.py  cli.py  gui.py  tui.py
tests/: conftest.py  test_card_engine.py  test_dataserver.py  test_learning_strategies.py  test_models.py  test_utils.py  test_visualizers.py
